--- a/src/Leagueoflegends.Support/Themes/Units/RiotButton.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotButton.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
-  <x:String x:Key="LockData">M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z</x:String>
+  <x:String x:Key="LockIconData">M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z</x:String>
   
   <LinearGradientBrush x:Key="RiotButtonBorderBrush" StartPoint="0.5,0" EndPoint="0.5,1">
     <GradientStop Color="#C8AA6E" Offset="0"/>
@@ -43,7 +43,7 @@
   </Style>
 
   <Style x:Key="LockPathStyle" TargetType="Path">
-    <Setter Property="Data" Value="{StaticResource LockData}"/>
+    <Setter Property="Data" Value="{StaticResource LockIconData}"/>
     <Setter Property="Width" Value="14"/>
     <Setter Property="Height" Value="14"/>
     <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -52,7 +52,6 @@
     <Setter Property="Visibility" Value="Collapsed"/>
     <Setter Property="Stretch" Value="Uniform"/>
   </Style>
-
 
   <Style TargetType="units:RiotButton">
     <Setter Property="Height" Value="30"/>
