--- a/src/Leagueoflegends.Support/Themes/Units/RiotChampSummary.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotChampSummary.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
-  <x:String x:Key="SummaryGeometry">M73.479167,6.4879167 L73.42115,83.273088 72.912406,84.002032 C70.050467,84.892122 67.912185,87.424602 67.60015,90.496932 L67.599357,90.512622 6.5652928,90.512622 6.5645002,90.496932 C6.2264661,87.168582 3.7451176,84.473782 0.52231627,83.814342 L0.50000002,83.376928 0.52083335,7.7738529 0.55016022,7.5572561 C3.2771481,6.9992703 5.4732712,4.9840263 6.2892464,2.3607517 L6.4277128,0.67162255 66.625,0.5 66.737466,1.3009875 C66.664269,4.4888962 70.108169,7.1286855 73.39635,6.9803701</x:String>
+  <x:String x:Key="SummaryPathData">M73.479167,6.4879167 L73.42115,83.273088 72.912406,84.002032 C70.050467,84.892122 67.912185,87.424602 67.60015,90.496932 L67.599357,90.512622 6.5652928,90.512622 6.5645002,90.496932 C6.2264661,87.168582 3.7451176,84.473782 0.52231627,83.814342 L0.50000002,83.376928 0.52083335,7.7738529 0.55016022,7.5572561 C3.2771481,6.9992703 5.4732712,4.9840263 6.2892464,2.3607517 L6.4277128,0.67162255 66.625,0.5 66.737466,1.3009875 C66.664269,4.4888962 70.108169,7.1286855 73.39635,6.9803701</x:String>
   <SolidColorBrush x:Key="SummaryBackgroundBrush" Color="#0A0908"/>
 
   <!-- TODO: Use this brush for text when Uno Platform supports gradients on TextBlock -->
@@ -25,7 +25,7 @@
 
   <Style x:Key="SummaryPathStyle" TargetType="Path">
     <Setter Property="Fill" Value="{StaticResource SummaryBackgroundBrush}"/>
-    <Setter Property="Data" Value="{StaticResource SummaryGeometry}"/>
+    <Setter Property="Data" Value="{StaticResource SummaryPathData}"/>
     <Setter Property="Stroke" Value="{StaticResource BorderGradient}"/>
     <Setter Property="StrokeThickness" Value="2"/>
   </Style>
