--- a/src/Leagueoflegends.Support/Themes/Units/RiotCheckBox.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotCheckBox.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
-  <x:String x:Key="CheckGeometry">M17.5625,6.5625 L10.0005,14.188 6.5004996,10.53201 5.0942497,11.875848 10.031599,16.876176 19.000529,8.0005944</x:String>
+  <x:String x:Key="CheckIconData">M17.5625,6.5625 L10.0005,14.188 6.5004996,10.53201 5.0942497,11.875848 10.031599,16.876176 19.000529,8.0005944</x:String>
   
   <LinearGradientBrush x:Key="CbxBorderOverBrush" EndPoint="0.5,1" StartPoint="0.5,0">
     <GradientStop Color="#735627" Offset="0"/>
@@ -28,7 +28,7 @@
   </Style>
 
   <Style x:Key="CheckPathStyle" TargetType="Path">
-    <Setter Property="Data" Value="{StaticResource CheckGeometry}"/>
+    <Setter Property="Data" Value="{StaticResource CheckIconData}"/>
     <Setter Property="Fill" Value="#705427"/>
     <Setter Property="HorizontalAlignment" Value="Center"/>
     <Setter Property="VerticalAlignment" Value="Center"/>
