--- a/src/Leagueoflegends.Support/Themes/Units/RiotClashEmblem.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotClashEmblem.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:units="using:Leagueoflegends.Support.UI.Units">
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
-  <x:String x:Key="SummaryImage">ms-appx:///Leagueoflegends.Support/Images/worlds_2022.png</x:String>
+  <x:String x:Key="SummaryImageSource">ms-appx:///Leagueoflegends.Support/Images/worlds_2022.png</x:String>
   
   <LinearGradientBrush x:Key="ImageBorderBrush" StartPoint="0.5,0" EndPoint="0.5,1">
     <GradientStop Color="#785A28" Offset="0"/>
@@ -78,7 +78,7 @@
               <Grid>
                 <Border x:Name="InnerBorder" Style="{StaticResource InnerCircleBorderStyle}">
                   <Border.Background>
-                    <ImageBrush ImageSource="{StaticResource SummaryImage}" Stretch="UniformToFill"/>
+                    <ImageBrush ImageSource="{StaticResource SummaryImageSource}" Stretch="UniformToFill"/>
                   </Border.Background>
                 </Border>
                 <Border x:Name="OverlayBorder" Style="{StaticResource OverlayBorderStyle}"/>
