--- a/src/Leagueoflegends.Support/Themes/Units/RiotComboBox.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotComboBox.xaml
@@ -3,9 +3,10 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:cnvts="using:Leagueoflegends.Support.Local.Converters"
   xmlns:units="using:Leagueoflegends.Support.UI.Units">
-
-  <x:String x:Key="DropDownGeometry">M12,6L7,11H17L12,6M7,13L12,18L17,13H7Z</x:String>
+  
   <cnvts:FromNullToValueConverter x:Key="NullToVisibleConverter" NotNullValue="Collapsed" NullValue="Visible"/>
+
+  <x:String x:Key="DropDownIconData">M12,6L7,11H17L12,6M7,13L12,18L17,13H7Z</x:String>
 
   <SolidColorBrush x:Key="RiotComboBoxBorderBrush" Color="#C6A667" />
   <SolidColorBrush x:Key="RiotComboBoxBackgroundBrush" Color="#0F1A20" />
@@ -30,7 +31,7 @@
 
   <Style x:Key="DropDownPathStyle" TargetType="Path">
     <Setter Property="Grid.Column" Value="1"/>
-    <Setter Property="Data" Value="{StaticResource DropDownGeometry}"/>
+    <Setter Property="Data" Value="{StaticResource DropDownIconData}"/>
     <Setter Property="Fill" Value="{StaticResource RiotComboBoxForegroundBrush}"/>
     <Setter Property="Width" Value="10"/>
     <Setter Property="Height" Value="10"/>
