--- a/src/Leagueoflegends.Support/Themes/Units/RiotIconButton.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotIconButton.xaml
@@ -1,8 +1,14 @@
 ﻿<ResourceDictionary 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:units="using:Leagueoflegends.Support.UI.Units">
-
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:units="using:Leagueoflegends.Support.UI.Units">
+  
+  <x:String x:Key="AlarmIconData">M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21</x:String>
+  <x:String x:Key="AddFolderIconData">M10,4L12,6H20A2,2 0 0,1 22,8V18A2,2 0 0,1 20,20H4C2.89,20 2,19.1 2,18V6C2,4.89 2.89,4 4,4H10M15,9V12H12V14H15V17H17V14H20V12H17V9H15Z</x:String>
+  <x:String x:Key="AddFriendsIconData">M15,14C12.33,14 7,15.33 7,18V20H23V18C23,15.33 17.67,14 15,14M6,10V7H4V10H1V12H4V15H6V12H9V10M15,12A4,4 0 0,0 19,8A4,4 0 0,0 15,4A4,4 0 0,0 11,8A4,4 0 0,0 15,12Z</x:String>
+  <x:String x:Key="MagnifyIconData">M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z</x:String>
+  <x:String x:Key="OptionIconData">M3,4H7V8H3V4M9,5V7H21V5H9M3,10H7V14H3V10M9,11V13H21V11H9M3,16H7V20H3V16M9,17V19H21V17H9</x:String>
+  
   <Style x:Key="PathStyle" TargetType="Path">
     <Setter Property="Stretch" Value="Uniform"/>
     <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -39,27 +45,27 @@
               <VisualStateGroup x:Name="IconStates">
                 <VisualState x:Name="Alarm">
                   <VisualState.Setters>
-                    <Setter Target="IconPath.Data" Value="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21"/>
+                    <Setter Target="IconPath.Data" Value="{StaticResource AlarmIconData}"/>
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="AddFolder">
                   <VisualState.Setters>
-                    <Setter Target="IconPath.Data" Value="M10,4L12,6H20A2,2 0 0,1 22,8V18A2,2 0 0,1 20,20H4C2.89,20 2,19.1 2,18V6C2,4.89 2.89,4 4,4H10M15,9V12H12V14H15V17H17V14H20V12H17V9H15Z"/>
+                    <Setter Target="IconPath.Data" Value="{StaticResource AddFolderIconData}"/>
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="AddFriends">
                   <VisualState.Setters>
-                    <Setter Target="IconPath.Data" Value="M15,14C12.33,14 7,15.33 7,18V20H23V18C23,15.33 17.67,14 15,14M6,10V7H4V10H1V12H4V15H6V12H9V10M15,12A4,4 0 0,0 19,8A4,4 0 0,0 15,4A4,4 0 0,0 11,8A4,4 0 0,0 15,12Z"/>
+                    <Setter Target="IconPath.Data" Value="{StaticResource AddFriendsIconData}"/>
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Magnify">
                   <VisualState.Setters>
-                    <Setter Target="IconPath.Data" Value="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"/>
+                    <Setter Target="IconPath.Data" Value="{StaticResource MagnifyIconData}"/>
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Option">
                   <VisualState.Setters>
-                    <Setter Target="IconPath.Data" Value="M3,4H7V8H3V4M9,5V7H21V5H9M3,10H7V14H3V10M9,11V13H21V11H9M3,16H7V20H3V16M9,17V19H21V17H9"/>
+                    <Setter Target="IconPath.Data" Value="{StaticResource OptionIconData}"/>
                   </VisualState.Setters>
                 </VisualState>
               </VisualStateGroup>
