--- a/src/Leagueoflegends.Support/Themes/Units/RiotLevelControl.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotLevelControl.xaml
@@ -3,6 +3,8 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
+  <x:String x:Key="BarPolygonData">0,0 150,0 170,25 300,25 300,60 0,60 0,0</x:String>
+  
   <LinearGradientBrush x:Key="LevelBackgroundBrush" StartPoint="0, 0.5" EndPoint="1, 0.5">
     <GradientStop Color="#FF000000" Offset="0"/>
     <GradientStop Color="#CC000000" Offset="0.25"/>
@@ -46,43 +48,16 @@
     <Setter Property="Fill" Value="{StaticResource LevelBackgroundBrush}"/>
   </Style>
 
-  <Style x:Key="LevelProgressBarStyle" TargetType="ProgressBar">
+  <Style x:Key="ProgressStyle" TargetType="units:RiotHorizontalProgress">
     <Setter Property="Grid.Row" Value="1"/>
-    <Setter Property="HorizontalAlignment" Value="Left"/>
-    <Setter Property="Margin" Value="0 3 0 0"/>
-    <Setter Property="Width" Value="280"/>
-    <Setter Property="Template">
-      <Setter.Value>
-        <ControlTemplate TargetType="ProgressBar">
-          <Border
-            Background="Transparent"
-            BorderBrush="#463714"
-            BorderThickness="1">
-            <Border
-              Background="#0A323C"
-              BorderBrush="#072228"
-              BorderThickness="1"
-              Padding="1">
-              <Grid x:Name="PART_Track">
-                <Rectangle
-                  x:Name="PART_Indicator"
-                  HorizontalAlignment="Left"
-                  Fill="#0A323C"
-                  Height="4"/>
-              </Grid>
-            </Border>
-          </Border>
-        </ControlTemplate>
-      </Setter.Value>
-    </Setter>
   </Style>
-
+  
   <Style TargetType="units:RiotLevelControl">
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotLevelControl">
           <Grid>
-            <Polygon Style="{StaticResource BarPolygonStyle}" Points="0,0 150,0 170,25 300,25 300,60 0,60 0,0"/>
+            <Polygon Style="{StaticResource BarPolygonStyle}" Points="{StaticResource BarPolygonData}"/>
             <Grid Margin="0 0 5 5">
               <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -99,13 +74,8 @@
                   <Run Text="{Binding MaxXP, RelativeSource={RelativeSource TemplatedParent}}"/>
                 </TextBlock>
               </StackPanel>
-              <ProgressBar
-                Style="{StaticResource LevelProgressBarStyle}"
-                Value="{Binding CurrentXP, RelativeSource={RelativeSource TemplatedParent}}" 
-                Maximum="{Binding MaxXP, RelativeSource={RelativeSource TemplatedParent}}"
-                Visibility="Collapsed"/>
               <units:RiotHorizontalProgress
-                Grid.Row="1" 
+                Style="{StaticResource ProgressStyle}"
                 Value="{Binding CurrentXP, RelativeSource={RelativeSource TemplatedParent}}" 
                 Maximum="{Binding MaxXP, RelativeSource={RelativeSource TemplatedParent}}"/>
             </Grid>
