--- a/src/Leagueoflegends.Support/Themes/Units/RiotTextBoxCloseButton.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotTextBoxCloseButton.xaml
@@ -3,10 +3,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
-  <x:String x:Key="CloseGeometry">M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z</x:String>
+  <x:String x:Key="CloseIconData">M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z</x:String>
   
   <Style TargetType="Path" x:Key="ClosePathStyle">
-    <Setter Property="Data" Value="{StaticResource CloseGeometry}"/>
+    <Setter Property="Data" Value="{StaticResource CloseIconData}"/>
     <Setter Property="Fill" Value="#CDBE91"/>
     <Setter Property="Width" Value="10"/>
     <Setter Property="Height" Value="10"/>
